src/test/deca/context/invalid/created/SansObjet/NoTypeVar.deca
// Description:
//    Teste la declaration d'une variable sans type
// Resultats:
//    NoTypeVar.deca:7:4: Error: Identifier 'a' is undefined

{
    a = 1;
}